--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
         <div>
             <div class="centered">
                 <nav class="navbar">
+
                     <ul id="home">
                         <li><a href="projectindex.html">Home</li></a>
                         <li><a href="./about.html">About Us</a></li>
                         <li><a href="./skills.html">Contact Us</a></li>
                         <li><a href="./portfolio.html">Galery</a></li>
-
                     </ul>
                 </nav>
             </div>
@@ -31,61 +31,51 @@
                 </div>
             </div>
         </div>
-
     </header>
-
     <main>
-
         <section>
             <h3>About us</h3>
-            <p>
-                Welcome to Tuku Creations, where passion meets craftsmanship. As a family of artists with over two
-                decades of experience in restoration and art production, we take pride in our dedication to
-                preserving the beauty of the past while creating stunning pieces for the future. Specializing in
-                woodwork restoration, papery mixed media art, and jewelry crafting, our team combines traditional
-                techniques with innovative approaches to bring your vision to life. Whether it's breathing new life
-                into antique furniture, crafting unique paper-based artworks, or designing exquisite jewelry pieces,
-                Tuku Creations is your trusted partner in the world of artistry and restoration. Join us on a
-                journey where creativity knows no bounds, and every creation tells a stor
-            </p>
-            <p>
+            <p>Welcome to Tuku Creations,
+                where passion meets craftsmanship. As a family of artists with over two decades of experience in
+                restoration and art production,
+                we take pride in our dedication to preserving the beauty of the past while creating stunning pieces for
+                the future. Specializing in woodwork restoration,
+                papery mixed media art,
+                and jewelry crafting,
+                our team combines traditional techniques with innovative approaches to bring your vision to life.
+                Whether it's breathing new life
+                into antique furniture,
+                crafting unique paper-based artworks,
+                or designing exquisite jewelry pieces,
+                Tuku Creations is your trusted partner in the world of artistry and restoration. Join us on a journey
+                where creativity knows no bounds,
+                and every creation tells a story </p>
+            <section class="body-picture"></section>
 
-            </p>
-        </section>
-
-        <section>
-            <h3 class="blue-background">Mad Skillz</h3>
-            <p>
-                I love to cook, and spending time with my kid <bold>dancer</bold>
-            </p>
-            <h3>A little about my skills</h3>
-            <ul>
-                <li>good cook</li>
-                <li>Typing</li>
-                <li>sleeping</li>
-            </ul>
-        </section>
-        <section>
-            <h3>Work Experience</h3>
-            <ol>
-                <li>Universita of Utah</li>
-                <li>Albor Technologico</li>
-                <li>Avetta</li>
-                <li>IOV</li>
-            </ol>
-        </section>
-
-
+            <section>
+                <h3 class="blue-background">Mad Skillz</h3>
+                <p>I love to cook,
+                    and spending time with my kid <bold>dancer</bold>
+                </p>
+                <h3>A little about my skills</h3>
+                <ul>
+                    <li>good cook</li>
+                    <li>Typing</li>
+                    <li>sleeping</li>
+                </ul>
+            </section>
+            <section>
+                <h3>Work Experience</h3>
+                <ol>
+                    <li>Universita of Utah</li>
+                    <li>Albor Technologico</li>
+                    <li>Avetta</li>
+                    <li>IOV</li>
+                </ol>
+            </section>
     </main>
-
-    <footer class="footer">
-
-
-    </footer>
+    <footer class="footer"></footer>
     <script src="index.js"></script>
-
 </body>
-
-
 
 </html>
