--- a/index.html
+++ b/index.html
@@ -17,12 +17,16 @@
                 <nav class="navbar">
 
                     <ul id="home">
-                        <li><a href="projectindex.html">Home</li></a>
-                        <li><a href="./about.html">About Us</a></li>
-                        <li><a href="./skills.html">Contact Us</a></li>
-                        <li><a href="./portfolio.html">Galery</a></li>
+                        <li><a href="#about_us">About Us</li></a>
+                        <li><a href="#Projects">Projects</a></li>
+                        <li><a href="#Contact_us">Contact Us</a></li>
+                        <li><a href="./gallery.html">Gallery</a></li>
                     </ul>
                 </nav>
+                <br>
+                <br>
+                <br>
+
             </div>
             <div class="centered">
                 <div class="font-family">
@@ -30,49 +34,84 @@
                     <h2>Restoration & Art</h2>
                 </div>
             </div>
-        </div>
+            <div class="centered">
+
+                <img height="300" ; align-item="centered" ; src="Pictures\Tuku creations logo.png">
+            </div>
     </header>
     <main>
         <section>
-            <h3>About us</h3>
-            <p>Welcome to Tuku Creations,
-                where passion meets craftsmanship. As a family of artists with over two decades of experience in
-                restoration and art production,
-                we take pride in our dedication to preserving the beauty of the past while creating stunning pieces for
-                the future. Specializing in woodwork restoration,
-                papery mixed media art,
-                and jewelry crafting,
-                our team combines traditional techniques with innovative approaches to bring your vision to life.
-                Whether it's breathing new life
-                into antique furniture,
-                crafting unique paper-based artworks,
-                or designing exquisite jewelry pieces,
-                Tuku Creations is your trusted partner in the world of artistry and restoration. Join us on a journey
-                where creativity knows no bounds,
-                and every creation tells a story </p>
-            <section class="body-picture"></section>
+            <div class="centered">
+                <h3 id="about_us">
+                    <h3 class="blue-background">About us</h3>
+                </h3>
 
-            <section>
-                <h3 class="blue-background">Mad Skillz</h3>
-                <p>I love to cook,
-                    and spending time with my kid <bold>dancer</bold>
-                </p>
-                <h3>A little about my skills</h3>
-                <ul>
-                    <li>good cook</li>
-                    <li>Typing</li>
-                    <li>sleeping</li>
-                </ul>
-            </section>
-            <section>
-                <h3>Work Experience</h3>
-                <ol>
-                    <li>Universita of Utah</li>
-                    <li>Albor Technologico</li>
-                    <li>Avetta</li>
-                    <li>IOV</li>
-                </ol>
-            </section>
+                <p>Welcome to Tuku Creations,
+                    where passion meets craftsmanship. As a family of artists with over two decades of experience in
+                    restoration and art production,
+                    we take pride in our dedication to preserving the beauty of the past while creating stunning
+                    pieces for
+                    the future. Specializing in woodwork restoration,
+                    papery mixed media art,
+                    and jewelry crafting,
+                    our team combines traditional techniques with innovative approaches to bring your vision to
+                    life.
+                    Whether it's breathing new life
+                    into antique furniture,
+                    crafting unique paper-based artworks,
+                    or designing exquisite jewelry pieces,
+                    Tuku Creations is your trusted partner in the world of artistry and restoration. Join us on a
+                    journey
+                    where creativity knows no bounds,
+                    and every creation tells a story </p>
+                <div class="centered">
+
+                    <img height="300" ; align-item="centered" ; src="Pictures\0004-Mily-Airbnb-Experiences12032019.jpg">
+                </div>
+            </div>
+            </div>
+
+        </section>
+
+        <section>
+            <div class="centered">
+                <h3 id="Projects">
+                    <h3 class="blue-background">Projects</h3>
+                    <p>Currently we are relocating to WV, once we are settle, we can start with your next project.
+
+                    </p>
+                    <h3 class="blue-background">What do we do?</h3>
+                    <ul>
+                        <li>Furniture restoration</li>
+                        <br>
+
+                        <img height="250" ; position="centered" ; src="Pictures\wood_sanding.png">
+                        <br>
+                        <br>
+
+                        <li>Jewelry pieces</li>
+                        <br>
+
+                        <img height="250" ; position="centered" ; src="Pictures\jelwery.png">
+                        <br>
+                        <br>
+                        <li>Mix Media Art</li>
+                        <br>
+                        <img height="250" ; position="centered" ; src="Pictures\Paint_Brushes.png">
+        </section>
+        <br>
+        <section>
+            <div class="centered">
+                <h3 id="Contact_us">
+                    <h3 class="blue-background">Contact us</h3>
+
+                    <li>Tukucreations@gmail.com</li>
+                    <li>Littletukucreations@gmail.com</li>
+                    <li>PO BOX 522153, SLC UT 84152</li>
+            </div>
+
+        </section>
+        </div>
     </main>
     <footer class="footer"></footer>
     <script src="index.js"></script>
